sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:14: error: illegal start of simple expression
	}while()
               ^AlgCombSort:15: error: ')' expected but '}' found.
}
^