sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
	var ecart:Float =getNombreValeurs();
	do{
		if(ecart>1){
			ecart=ecart/1.3;
		}
		var i:Int=0;
		while(i+ecart<getNombreValeurs()){
			if(plusPetit(i+ecart,i)){
				echange(i+ecart,i);
			}
		}
	}while()
}
